--- a/Hackathon/ltcbank/pom.xml
+++ b/Hackathon/ltcbank/pom.xml
@@ -59,6 +59,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
