--- a/Hackathon/ltcbank/src/main/resources/application.properties
+++ b/Hackathon/ltcbank/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=ltcbank
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.platform=h2
-
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.datasource-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.h2.console.enabled=true
